# bw-r-drivers-tc37x

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  compile_on_host.sh  compile_on_target.sh  run_on_host.sh  run_on_target.sh  rust-toolchain.target.toml
.cargo/: config.target.toml  config.toml  config.toml.target
.github/workflows/: doc.yml
doc/: dev-utils.md  development_utilities.md  troubleshooting.md  usage-guide.md
examples/: blinky.rs  can_send.rs  can_test_application.rs  canky.rs
src/: common.rs  critical_section.rs  gpio.rs  init.rs  intrinsics.rs  lib.rs  log.rs  panic_handler.rs  tracing.rs  util.rs
src/can/: baud_rate.rs  can.rs  can_module.rs  can_node.rs  frame.rs  mod.rs  msg.rs  node.rs  pin_map.rs  wip_mod.rs
src/can/can_module/: mod.rs  service_request.rs
src/can/can_node/: config.rs  effects.rs  mod.rs
src/can/internals/: ext_msg.rs  mod.rs  rx.rs  std_msg.rs  tx.rs
src/can/reg/: ext_msg.rs  mod.rs  msg_rx.rs  msg_tx.rs  std_msg.rs
src/cpu/: asm.rs  mod.rs  types.rs
src/gpio/: alt.rs  convert.rs  dynamic.rs  erased.rs  group.rs  hal.rs  hal_02.rs  hal_1.rs  mod.rs  outport.rs  partially_erased.rs  tc37x.rs  tc37x_io.rs
src/gpio/alt/: tc37x.rs
src/runtime/: critical_section.rs  init.rs  mod.rs  panic_handler.rs
src/scu/: ccu.rs  mod.rs  wdt.rs  wdt_call.rs
src/scu/snapshots/: bw_r_drivers_tc37x__scu__wdt__tests__clear_cpu_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__clear_safety_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__clear_then_set_cpu_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__clear_then_set_safety_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__disable_cpu_watchdog.snap  bw_r_drivers_tc37x__scu__wdt__tests__disable_safety_watchdog.snap  bw_r_drivers_tc37x__scu__wdt__tests__set_cpu_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__set_safety_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__set_then_clear_cpu_endinit_inline.snap  bw_r_drivers_tc37x__scu__wdt__tests__set_then_clear_safety_endinit_inline.snap
src/ssw/: infra.rs  mod.rs  tc0.rs
src/tracing/: dummy.rs  log.rs  mod.rs  print.rs
tests/: can.rs  gpio.rs
tests/snapshots/: can__can_module_enable.snap  can__can_module_take_node.snap  can__can_module_take_node.snap.new  can__setup_can0.snap  gpio__avoid_side_effects_when_mode_does_not_change.snap  gpio__gpio_outport_tuple.snap  gpio__input_pin_pull_up.snap  gpio__input_pin_type_erasure_number.snap  gpio__output_pin_type_erasure_number.snap  gpio__output_pin_type_erasure_number.snap.new  gpio__output_pin_type_erasure_port_and_number.snap  gpio__pin_set_high.snap  gpio__pin_set_two_pins_on_two_ports_high.snap  gpio__pin_set_two_pins_same_port_high.snap  gpio__toggle_output_pin.snap  gpio__toggle_output_pin_type_erasure_number.snap  gpio__toggle_stateful_output_pin_type_erasure_number.snap  gpio__toggle_stateful_output_pin_type_erasure_port_and_number.snap
tools/: build  build_on_host  build_on_target  run_on_host  run_on_target  set-build-profile  set_build_profile
