[package]
name = "tc37x-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-can = "0.4.1"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.env_logger]
optional = true
version = "0.10.1"

[dependencies.defmt-rtt]
optional = true
version = "0.4.0"

[dependencies.defmt]
optional = true
version = "0.3.5"

[dependencies.embedded-hal]
package = "embedded-hal"
git = "https://github.com/rust-embedded/embedded-hal.git"
rev = "v1.0.0-rc.1"

[dependencies.tc37x]
path = "../tc37x"
features = [
    "scu",
    "smu",
    "src",
    "cpu0",
    "smu",
    "can0", 
    "can1",
    "port_00",
    "port_01",
    "port_02",
    "port_10",
    "port_11",
    "port_12",
    "port_13",
    "port_14",
    "port_15",
    "port_20",
    "port_21",
    "port_22",
    "port_23",
    "port_32",
    "port_33",
    "port_34",
    "port_40",
    "can0",
    "can1",
]

[dependencies.critical-section]
optional = true
version = "1.1.1"
features = ["restore-state-bool"]

[dependencies.insta]
optional = true
version = "1.34.0"
features = ["ron"]

[dev-dependencies]

[features]
default = []
log_with_defmt = ["dep:defmt", "dep:defmt-rtt", "dep:critical-section"]
log_with_env_logger = ["dep:log", "dep:env_logger"]
tracing = ["dep:insta"]