[package]
name = "bw-r-driver-tc37x"
version = "0.1.0"
edition = "2021"
license = "Boost Software License - Version 1.0"

[dependencies]
embedded-can = "0.4.1"

[dependencies.log]
optional = true
version = "0.4"

[dependencies.env_logger]
optional = true
version = "0.10.1"

[dependencies.defmt-rtt]
optional = true
version = "0.4.0"

[dependencies.defmt]
optional = true
version = "0.3.5"

[dependencies.embedded-hal]
package = "embedded-hal"
git = "https://github.com/rust-embedded/embedded-hal.git"
rev = "v1.0.0-rc.1"

[dependencies.tc37x]
path = "../tc37x"
features = [
    "scu",
    "smu",
    "src",
    "cpu0",
    "smu",
    "can0", 
    "can1",
    "p00",
    "p01",
    "p02",
    "p10",
    "p11",
    "p12",
    "p13",
    "p14",
    "p15",
    "p20",
    "p21",
    "p22",
    "p23",
    "p32",
    "p33",
    "p34",
    "p40",
    "can0",
    "can1",
]

[dependencies.bw-r-rt-example]
path = "../bw-r-rt-example"

[dependencies.critical-section]
optional = true
version = "1.1.1"
features = ["restore-state-bool"]

[dependencies.insta]
optional = true
version = "1.34.0"
features = ["ron"]

[dev-dependencies]

[features]
default = []
log_with_defmt = ["dep:defmt", "dep:defmt-rtt", "dep:critical-section"]
log_with_env_logger = ["dep:log", "dep:env_logger"]
tracing = ["dep:insta", "tc37x/tracing"]