[package]
name = "bw-r-drivers-tc37x"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[dependencies.embedded-can]
version = "=0.4.1"

[dependencies.embedded-hal]
version = "1.0.0"

[dependencies.tc375-pac]
registry = "bluewind"
version = "0.0.1"
features = [
    "scu",
    "smu",
    "src",
    "cpu0",
    "p00",
    "p01",
    "p02",
    "p10",
    "p11",
    "p12",
    "p13",
    "p14",
    "p15",
    "p20",
    "p21",
    "p22",
    "p23",
    "p32",
    "p33",
    "p34",
    "p40",
    "can0",
    "can1",
]

[dependencies.critical-section]
optional = true
version = "=1.1.2"
features = ["restore-state-bool"]

[dependencies.insta]
optional = true
version = "=1.36.0"
features = ["ron"]

[dependencies.log]
optional = true
version = "0.4"

[dependencies.env_logger]
optional = true
version = "0.11"

[dependencies.defmt-rtt]
optional = true
version = "=0.4.0"

[dependencies.defmt]
optional = true
version = "=0.3.6"

[features]
default = []
log_with_defmt = ["dep:defmt", "dep:defmt-rtt", "dep:critical-section"]
log_with_env_logger = ["dep:log", "dep:env_logger"]
tracing = ["dep:insta", "tc375-pac/tracing"]

